--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="Resources/css/style.css">
-    <title>Tea Cosy</title>
+    <title>Tea Cozy</title>
   </head>
   <body>
+    <div class="Header">
+      <img class="HeaderImage" src="Resources/img-tea-cozy-logo.png" alt="Tea Cozy Logo">
+    <div class="Headernav">
+      <nav>
+        <a href="#">Mission</a>
+        <a href="#">Featured Tea</a>
+        <a href="#">Locations</a>
+      </nav>
+    </div>
+  </div>
+
+
     <div class="container">
 
     <div class="OurMission">
@@ -17,24 +29,29 @@
 
     <div class="TeaoftheMonth">
       <div class="TeaBanner">
-
+        <h2 class="Banner">Tea of the Month</h2>
+        <h4 class="Banner">What's Steeping at The Tea Cozy?</h4>
       </div>
       <div class="TeaImages">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <div class="">
+          <img class="Image" src="Resources/img-berryblitz.jpg" alt="Berry Blitz Tea">
+          <img class="Image" src="Resources/img-spiced-rum.jpg" alt="">
+          <img class="Image" src="Resources/img-donut.jpg" alt="">
+        </div>
+        <div class="">
+          <img class="Image" src="Resources/img-myrtle-ave.jpg" alt="">
+          <img class="Image" src="Resources/img-bedford-bizarre.jpg" alt="">
+        </div>
       </div>
     </div>
 
     <div class="Location">
       <div class="LocationBanner">
-
+        <h2 class="Banner">Locations</h2>
       </div>
       <div class="LocationImages">
         <div class="LocationBlock">
-
+          <h3></h3>
         </div>
         <div class="LocationBlock">
 
@@ -43,6 +60,17 @@
 
         </div>
       </div>
+    </div>
+
+    <div class="footer">
+      <h2>The Tea Cozy</h2>
+      <br>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+      <br>
+    </div>
+    <div id="copyright">
+      <h5>copyright The Tea Cozy 2017</h5>
     </div>
 
   </div>
