--- a/index.html
+++ b/index.html
@@ -6,28 +6,29 @@
     <title>Tea Cozy</title>
   </head>
   <body>
+    <!-- Header -->
     <div class="Header">
       <img class="HeaderImage" src="Resources/img-tea-cozy-logo.png" alt="Tea Cozy Logo">
     <div class="Headernav">
       <nav>
-        <a href="#">Mission</a>
-        <a href="#">Featured Tea</a>
-        <a href="#">Locations</a>
+        <a href="#Mission">Mission</a>
+        <a href="#Month">Featured Tea</a>
+        <a href="#Location">Locations</a>
       </nav>
     </div>
   </div>
 
-
+  <!--content-->
     <div class="container">
 
-    <div class="OurMission">
+    <div id="Mission" class="OurMission">
       <div class="MissionBanner">
         <h2 class="Banner">Our Mission</h2>
         <h4 class="Banner">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h3>
       </div>
     </div>
 
-    <div class="TeaoftheMonth">
+    <div id="Month" class="TeaoftheMonth">
       <div class="TeaBanner">
         <h2 class="Banner">Tea of the Month</h2>
         <h4 class="Banner">What's Steeping at The Tea Cozy?</h4>
@@ -35,39 +36,63 @@
       <div class="TeaImages">
         <div class="">
           <img class="Image" src="Resources/img-berryblitz.jpg" alt="Berry Blitz Tea">
+          <div id="Caption1">
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
           <img class="Image" src="Resources/img-spiced-rum.jpg" alt="">
+          <div id="Caption2">
+            <h4>Spiced Rum Tea</h4>
+          </div>
           <img class="Image" src="Resources/img-donut.jpg" alt="">
+          <div id="Caption3">
+            <h4>Seasonal Donuts</h4>
+          </div>
         </div>
-        <div class="">
+        <div class="column2">
           <img class="Image" src="Resources/img-myrtle-ave.jpg" alt="">
+          <div id="Caption4">
+            <h4>Myrtle Ave Tea</h4>
+          </div>
           <img class="Image" src="Resources/img-bedford-bizarre.jpg" alt="">
+          <div id="Caption5">
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="Location">
+    <div id="Location" class="Location">
       <div class="LocationBanner">
         <h2 class="Banner">Locations</h2>
       </div>
       <div class="LocationImages">
         <div class="LocationBlock">
-          <h3></h3>
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
         </div>
         <div class="LocationBlock">
-
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
         </div>
         <div class="LocationBlock">
-
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
         </div>
       </div>
     </div>
 
+<!--Footer-->
+
     <div class="footer">
       <h2>The Tea Cozy</h2>
-      <br>
       <h5>contact@theteacozy.com</h5>
       <h5>917-555-8904</h5>
-      <br>
     </div>
     <div id="copyright">
       <h5>copyright The Tea Cozy 2017</h5>
